--- a/src/TODO
+++ b/src/TODO
@@ -11,13 +11,21 @@
    - Upcoming appointments for SP don't show up after they have been made. Even after logging out and back in --> FIXED
    - Upcoming appointments for User don't show up after they have been booked. Even after logging out and back in --> FIXED
    - User cannot book appointments because it says there is a time conflict --> FIXED
-- data validation for user (line 494 of LogInPage)
-- fix gray out Canceled in UserHomePage and SPHomePage - Do later! Not top priority
-- use actual password when logging in for user
-   - change in Database 547
-- use actual password when logging in for service provider
-   - change in Database 561
 - when user makes appointment, you have to log out and back in to see it populate in the home page
 - when user cancels appointment, you have to log out and back in to see it say yes under canceled
 - when user cancels appointment, they can't go back and make that appointment. Doesn't show in table
    - booked needs to be switched back to 0
+- when sp makes appointment, you have to log out and back in to see it
+- times in sp make appointment need to be in 30 minute increments --> FIXED
+- user search by description in appointment
+- description in user book page table needs to be wider
+
+# For Final Demo:
+- use actual password when logging in for user
+   - change in Database 547
+- use actual password when logging in for service provider
+   - change in Database 561
+
+# Secondary Requirements/Optional:
+- fix gray out Canceled in UserHomePage and SPHomePage - Do later! Not top priority
+- data validation for user (line 494 of LogInPage) - Don't know if I need to do still...
