Delete user implemented for admin home page

--- a/src/TODO
+++ b/src/TODO
@@ -11,4 +11,9 @@
 
 
 # Sidney's To-do's
+- functionality for #9
+- should just be another copy/paste situation with a couple added things
 
+- create delete button in Users tab
+- user will select person from table and press delete
+- when button is pressed, confirmation message appears for user to press okay/yes
